--- a/single_detail.html
+++ b/single_detail.html
@@ -203,14 +203,15 @@
       <tr>
         <td text-align="right"><span style="whitespace: nowrap">
 	  <embed id="feynman" src="<% $information->{feynman_url} %>" align="bottom" width="<% $information->{feynman_width} %>" height="<% $information->{feynman_height} %>" border="0" pluginspage="http://www.adobe.com/svg/viewer/install/"></embed>
-	  <font face="Courier New, Courier, mono" size="-3">&nbsp;&nbsp;&nbsp;<a href="/download/bpseq.html?species=<% $information->{species} %>&mfeid=<% $information->{id} %>">Download&nbsp;bpseq</a> or <a href="rnaeval.html?species=<% $information->{species} %>&mfeid=<% $information->{id} %>">rnaeval</a>
+	  <font face="Courier New, Courier, mono" size="-3">&nbsp;&nbsp;&nbsp;<a href="/download/bpseq.html?species=<% $information->{species} %>&mfeid=<% $information->{id} %>">Download&nbsp;bpseq</a> or <a href="/download/jviz.html?accession=<% $information->{accession} %>&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">jviz output.</a>
 <br>&nbsp;&nbsp;&nbsp;Download
 <a href="/download/png.html?accession=<% $information->{accession} %>&format=png&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">&nbsp;png,</a>
 <a href="/download/png.html?accession=<% $information->{accession} %>&format=pdf&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">pdf,</a>
 <a href="/download/png.html?accession=<% $information->{accession} %>&format=ps&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">ps</a>, View
 <a href="/cfeynman.html?accession=<% $information->{accession} %>&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">cfeynman graph</a>, Try
 <a href="/feynman_overlap.html?start=<% $information->{slipstart} %>&seqlength=<% $information->{seqlength} %>&accession=<% $information->{accession} %>">An overlap</a> or
-<a href="/micro.html?species=<% $information->{species} %>&accession=<% $information->{accession} %>&start=<% $information->{slipstart} %>">micro</a>
+<a href="/micro.html?species=<% $information->{species} %>&accession=<% $information->{accession} %>&start=<% $information->{slipstart} %>">micro</a> or
+<a href="/jviz.html?accession=<% $information->{accession} %>&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">jviz output.</a>
 
 <br>
 	  </font>
