something messed up my indentation.  Also added some jviz logic.

--- a/jviz.html
+++ b/jviz.html
@@ -6,7 +6,8 @@
    <p>The following images are generated via jViz, which is available at:
 <a href="http://jviz.cs.sfu.ca/">http://jviz.cs.sfu.ca/</a></p>
 
-% my @jviz_types = ('jviz_classic_structure', 'jviz_dot_plot', 'jviz_linked_graph', 'jviz_circle_graph', 'jviz_dual_graph');
+%# my @jviz_types = ('jviz_classic_structure', 'jviz_dot_plot', 'jviz_linked_graph', 'jviz_circle_graph', 'jviz_dual_graph');
+% my @jviz_types = ('jviz_classic_structure', 'jviz_dot_plot', 'jviz_linked_graph', 'jviz_circle_graph');
 % foreach my $type (@jviz_types) {
 
 %  my $jviz_graph = new PRFGraph(config => $config, mfe_id => $mfeid, accession => $accession, species => $species);
