--- a/detail.html
+++ b/detail.html
@@ -17,9 +17,12 @@ $information->{accession} = $accession;
 $information->{slipstart} = $slipstart;
 $db->Remove_Duplicates($accession);
 my ($detail_stmt, $info);
-if (!defined($slipstart)) {
+if (!defined($slipstart) and !$mfeid) {
   $detail_stmt = qq"SELECT $mt.*, gene_info.genename FROM $mt,gene_info WHERE gene_info.genome_id = ? AND gene_info.genome_id = $mt.genome_id ORDER BY start, seqlength DESC, mfe_method DESC";
   $info = $db->MySelect(statement => $detail_stmt, vars => [$genome_id,], type => 'list_of_hashes') or Callstack(message => $detail_stmt , die => 0);
+} elsif (!$slipstart) { ## then mfeid is defined
+  $detail_stmt = qq"SELECT $mt.*, gene_info.genename FROM $mt,gene_info WHERE gene_info.genome_id = ? AND gene_info.genome_id = $mt.genome_id AND $mt.id = ? ORDER BY seqlength DESC, mfe_method DESC";
+  $info = $db->MySelect(statement => $detail_stmt, vars => [$genome_id,$mfeid], type => 'list_of_hashes') or Callstack(message => $detail_stmt, die => 0);
 } else {
   $detail_stmt = qq"SELECT $mt.*, gene_info.genename FROM $mt,gene_info WHERE gene_info.genome_id = ? AND gene_info.genome_id = $mt.genome_id AND $mt.start = ? ORDER BY seqlength DESC, mfe_method DESC";
   $info = $db->MySelect(statement => $detail_stmt, vars => [$genome_id,$slipstart], type => 'list_of_hashes') or Callstack(message => $detail_stmt, die => 0);
@@ -147,4 +150,5 @@ $db->Put_Webqueue($information->{genome_id}) if ($num_have < $num_expected_mfes)
 <%args>
  $accession => 'SGDID:S000001';
  $slipstart => undef;
+ $mfeid => undef;
 </%args>
