added some help text and finished the snp changes for Vivek

--- a/download.html
+++ b/download.html
@@ -9,7 +9,7 @@ sub On_Campus {
     }
 }
 </%perl>
-<p>The source of the PRFdb is available via <a href="http://github.com/abelew/prfdb">github</a>.</p>
+<p>The source of the PRFdb is available via <a href="http://github.com/abelew/prfdb" title="Trey's gihub directory, yay!" rel="external" target="_blank">github</a>.</p>
 
 % if (On_Campus()) {
 <form method="post" action="http://prfdb.umd.edu/download/species.html" enctype="application/x-www-form-urlencoded">
