--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </p>
 
     <p>
- <a href="html/viral.png">Viruses</a>
+ <a alt="Viral PRF example" title="A Viral PRF example" href="html/viral.png">Viruses</a>
  typically use -1 PRF as a genome condensation strategy;
  enabling them to encode multiple proteins from a single unaltered
  mRNA. Historically, because of their relative simplicity, many
@@ -53,18 +53,10 @@
   Please search for a gene of interest or select one of the
   links above to get started.  Most of the sequence information from
   this database came from either the
-   <a href="http://yeastgenome.org">Yeast Genome Project</a>
+   <a title="Go to the Yeast Genome project's homepage." href="http://yeastgenome.org" target="_blank">Yeast Genome Project</a>
   or the
-   <a href="http://mgc.nci.nih.gov">Mammalian Gene Collection</a>.
+   <a title="Go to the (now defunct) Mammalian Genome Collection." href="http://mgc.nci.nih.gov" target="_blank">Mammalian Gene Collection</a>.
     </p>
-
-    <p>
-  It is possible to search for any word(s) from the NCBI or SGD gene
-  description as well as the canonical gene name.  Thus searching for
-  'RPL' or 'ribosome' are likely candidates for looking at ribosomal
-  genes.
-    </p>
-
 <hr>
 
  <ol>
