--- a/search.html
+++ b/search.html
@@ -173,14 +173,14 @@ $(document).ready(function()
   <& species_selector.html, select_name => "search_species_limit" &>
 <br>
   Or choose a particular accession:  <input type="text" name="accession"  size="20"><br>
-  Or an HGNC gene name (in humans only): <input type="text" name="hgnc_name" size="10"><br>
-  <input type="submit" name="search submit" value="Search"><a href="help_search_suggestions.html">Searching Suggestions</a></form>
+  Or an <a href="http://www.genenames.org/" title="Example HGNC gene names may be found here." rel="external" target="_blank">HGNC</a> gene name (in humans only): <input type="text" name="hgnc_name" size="10"><br>
+  <input type="submit" name="search submit" value="Search"><a href="help/search_suggestions.html" title="Try 'RPL'.">Searching Suggestions</a></form>
 
 </center>
 
 The sequences of the PRFdb come from the yeast genome project and the NCBI nucleotide database.<br>
-They are available here: <a href="http://yeastgenome.org">Yeast Genome</a><br>
-and: <a href="http://ncbi.nih.nlm.gov/nucleotide">NCBI</a>.
+They are available here: <a href="http://yeastgenome.org" title="at the yeast genome project." rel="external" target="_blank">Yeast Genome</a><br>
+and: <a href="http://ncbi.nih.nlm.gov/nucleotide" title="at the NCBI nucleotide database." rel="external" target="_blank">NCBI</a>.
 <hr>
 
 <form method="post" action="search_blast.html" enctype="application/x-www-form-urlencoded">
