I haven't done a commit in far far too long.

--- a/distribution.html
+++ b/distribution.html
@@ -91,6 +91,7 @@ window.onload = selection_option;
 </table>
 
 </center>
+<a href="download/cloud_csv.html?species=<% $species %>&seqlength=<% $seqlength %>&slipsites=<% $slipsites %>&algorithm = <% $mfe_methods %>">Download</a> the data for the above plot.
 <br>
 The x axis displays the range of putative <a href="help/detail.html#mfe">
 minimum free energy</a> values computed for all <i></i>
