changes to accomodate new versions of pknots etc.

--- a/single_detail.html
+++ b/single_detail.html
@@ -255,6 +255,7 @@
 <a href="/feynman_overlap.html?start=<% $information->{slipstart} %>&seqlength=<% $information->{seqlength} %>&accession=<% $information->{accession} %>">An overlap</a> or
 <a href="/micro.html?species=<% $information->{species} %>&accession=<% $information->{accession} %>&start=<% $information->{slipstart} %>">micro</a> or
 <a href="/jviz.html?accession=<% $information->{accession} %>&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">jviz output.</a>
+<small>Last modified: <% $information->{lastupdate} %></small>
 
 <br>
 	  </font>
