--- a/go_test.html
+++ b/go_test.html
@@ -50,7 +50,7 @@ sub Learn_Terms {
     my $term = shift;
     print "Ok what are in these terms...\n<br>";
     foreach my $k (sort keys %{$term}) {
-        print "TESTME key: $k  value: $term->{$k}\n<br>";
+        print "key: $k  value: $term->{$k}\n<br>";
     }
     
 }
