--- a/print_landscape.html
+++ b/print_landscape.html
@@ -11,7 +11,6 @@
  my $url;
  $species = 'virus' if ($species =~ /virus/);
  $picture_status = 1;
-# print "TESTME: $filename<br>\n";
  if (!-r $filename) {
   $picture_status = $pic->Make_Landscape($species);
   $height = $picture_status->{height};
@@ -20,7 +19,8 @@
  if (!defined($picture_status)) {
   $url = undef;
  } else {
-  use Image::Size;
+  
+  MyDeps::Res(('Image::Size')) unless (eval "use Image::Size; 1");
   ($width, $height) = imgsize($filename);
   $url = $pic->Picture_Filename(type => 'landscape',url=>'url');
  }
