--- a/single_detail.html
+++ b/single_detail.html
@@ -105,6 +105,15 @@
 
       </tr>
 
+% if (!$information->{mfe_turner}) {
+%   my $fold = new RNAFolders;
+%   my $turner = $fold->Compute_Energy(sequence => $information->{sequence}, parens => $information->{parens});
+%   $information->{mfe_turner} = $turner;
+%   my $mt = "mfe_$information->{species}";
+%   $mt = "mfe_virus" if ($mt =~ /virus/);
+%##   $db->MyExecute("UPDATE $mt SET mfe_turner = '$turner' WHERE id = '$information->{id}'");
+% } 
+
       <tr valign="top" bgcolor="#E9EBF7">
 	<td>
 	  <div align="right"><a href="/help/detail.html#mfe"><strong>MFE: </strong></a></div>
@@ -197,8 +206,8 @@
       <tr>
 	<td text-align="right"><span style="whitespace: nowrap">
 <!---	  <div class="fixedfont"><b><font face="Courier New, Courier, mono">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<% $information->{minus_stop} %></font></b>  --->
-	  <div class="fixedfont"><b><font face="Courier New, Courier, mono">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<% $information->{color_minus} %></font></b>
-	  <font face="Courier New, Courier, mono" size="-3">&nbsp;&nbsp;<b>-1&nbsp;Frame&nbsp;stop&nbsp;codons</b>
+	  <div class="fixedfont"><b><font face="Courier New, Courier, mono" size="1"><code>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<% $information->{color_minus} %></code></font></b>
+	  <font face="Courier New, Courier, mono" size="-3">&nbsp;&nbsp;&nbsp;<b>-1&nbsp;Frame&nbsp;stop&nbsp;codons</b>
           </font></div>
         </span>
         </td>
@@ -206,8 +215,8 @@
 
       <tr>
 	<td text-align="right"><span style="whitespace: nowrap">
-	  <div class="fixedfont"><font face="Courier New, Courier, mono"><% $information->{numbers} %></font>
-	  <font face="Courier New, Courier, mono" size="-3"><a href="/search_blast.html?location=local&accession=<% $information->{accession} %>&start=<% $information->{slipstart} %>">&nbsp;Blast&nbsp;subsequence</a>
+	  <div class="fixedfont"><b><font face="Courier New, Courier, mono" size="1"><code><% $information->{numbers} %></code></font></b>
+	  <font face="Courier New, Courier, mono" size="-3"><a href="/search_blast.html?location=local&accession=<% $information->{accession} %>&start=<% $information->{slipstart} %>">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Blast&nbsp;subsequence</a>
           </font></div>
          </span>
         </td>
@@ -215,7 +224,7 @@
 
       <tr>
 	<td text-align="right"><span style="whitespace: nowrap">
-	  <div class="fixedfont"><b><font face="Courier New, Courier, mono"><u><% $information->{slipsite} %></u><% $information->{pk_input_colored} %></font></b>
+	  <div class="fixedfont"><b><font face="Courier New, Courier, mono" size="1"><code><u><% $information->{slipsite} %></u><% $information->{pk_input_colored} %></code></font></b>
 	  <font face="Courier New, Courier, mono" size="-3">
 	    &nbsp;&nbsp;&nbsp;&nbsp;<a href="/download/subseq.html?species=<% $information->{species} %>&mfeid=<% $information->{id} %>">Download&nbsp;subsequence</a>
 	  </font></div>
@@ -225,7 +234,7 @@
 
       <tr>
 	<td text-align="right"><span style="whitespace: nowrap">
-	  <div class="fixedfont"><b><font face="Courier New, Courier, mono">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<% $information->{brackets_colored} %></font></b>
+	  <div class="fixedfont"><b><font face="Courier New, Courier, mono" size="1"><code>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<% $information->{brackets_colored} %></code></font></b>
 	  <font face="Courier New, Courier, mono" size="-3">
 	    &nbsp;&nbsp;&nbsp;&nbsp;<a href="/download/parens.html?species=<% $information->{species} %>&mfeid=<% $information->{id} %>">Download&nbsp;brackets</a>
 	  </font></div>
@@ -235,7 +244,7 @@
 
       <tr>
         <td text-align="right"><span style="whitespace: nowrap">
-    	  <div class="fixedfont"><b><font face="Courier New, Courier, mono">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<% $information->{parsed_colored} %></font></b>
+    	  <div class="fixedfont"><b><font face="Courier New, Courier, mono" size="1"><code>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<% $information->{parsed_colored} %></code></font></b>
 	  <font face="Courier New, Courier, mono" size="-3">
 	    &nbsp;&nbsp;&nbsp;&nbsp;<a href="/download/parsed.html?species=<% $information->{species} %>&mfeid=<% $information->{id} %>">Download&nbsp;parsed</a>
 	  </font></div>
